force-app/main/default/objects/Account/fields/Money__c.field-meta.xml
<CustomField>
    <fullName>Money__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Financial Goals &amp; Objectives, Tax Planning, Retirement Planning, Cash Flow Planning, Educational Savings, Family Security, Estate Planning, Investment Strategies</inlineHelpText>
    <label>Money</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>