force-app/main/default/objects/Account/fields/Next_Account_Team_Review__c.field-meta.xml
<CustomField>
    <fullName>Next_Account_Team_Review__c</fullName>
    <description>Last updated: CRM-6247</description>
    <formula>IF(ISPICKVAL(Classification__c, &quot;&quot;) 
,&quot;&quot;
,TEXT(
   CASE(TEXT(Classification__c), &quot;AAA&quot;, 180, &quot;AA&quot;, 180, &quot;A&quot;, 180, &quot;AS&quot;, 360, &quot;AF&quot;, 360, &quot;B&quot;, 360, &quot;C&quot;, 720, 720)
     - IF (ISBLANK(Last_Account_Team_Review__c), ROUND(NOW() -  DATETIMEVALUE(&quot;2024-11-20 00:00:00&quot;), 0), ROUND(NOW() -  Last_Account_Team_Review__c, 0)))

+ &quot; Days&quot;)</formula>
    <label>Next Account Team Review</label>
    <type>Text</type>
</CustomField>