force-app/main/default/objects/Account/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Occupation, Retirement, Business Owner, Professional Education, Credentials, Professional Successes, Accomplishments</inlineHelpText>
    <label>Occupation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>