force-app/main/default/objects/Account/fields/OnboardingAdvisor__c.field-meta.xml
<CustomField>
    <fullName>OnboardingAdvisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OnboardingAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>