force-app/main/default/objects/Account/fields/Open_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Amount__c</fullName>
    <label>Open Opportunity Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>