force-app/main/default/objects/Account/fields/Other_Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Other_Financial_Institution__c</fullName>
    <description>Motus Project Jira# MBM-110</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Financial Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>