force-app/main/default/objects/Account/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <description>CRM-6418 - Used in FORM</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Summarizes owner’s role, background, leadership style, business goals, key milestones, family involvement, and any unique factors (e.g. succession, health) that influence business operations and long-term stability.</inlineHelpText>
    <label>Ownership</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>