force-app/main/default/objects/Account/fields/PD_Rating__c.field-meta.xml
<CustomField>
    <fullName>PD_Rating__c</fullName>
    <description>CRM-3186</description>
    <label>PD Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>39</fullName>
            </value>
            <value>
                <fullName>BR1</fullName>
                <isActive>false</isActive>
                <label>BR1</label>
            </value>
            <value>
                <fullName>BR2</fullName>
                <isActive>false</isActive>
                <label>BR2</label>
            </value>
            <value>
                <fullName>BR3</fullName>
                <isActive>false</isActive>
                <label>BR3</label>
            </value>
            <value>
                <fullName>Default</fullName>
                <isActive>false</isActive>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>