force-app/main/default/objects/Account/fields/PD_Score__c.field-meta.xml
<CustomField>
    <fullName>PD_Score__c</fullName>
    <description>CRM-3186</description>
    <label>PD Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>