force-app/main/default/objects/Account/fields/Personal_Interests_Other__c.field-meta.xml
<CustomField>
    <fullName>Personal_Interests_Other__c</fullName>
    <description>Field to capture a member&apos;s personal interest if the user selects &quot;other&quot; from the personal interests picklist</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Personal Interests: Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>