force-app/main/default/objects/Account/fields/POC_Test_1__c.field-meta.xml
<CustomField>
    <fullName>POC_Test_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POC Test 1</label>
    <type>Checkbox</type>
</CustomField>