force-app/main/default/objects/Account/fields/Preferred_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Person__c</fullName>
    <description>Data Migration - CRM0349</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Preferred Contact Person</label>
    <length>80</length>
    <type>Text</type>
</CustomField>