force-app/main/default/objects/Account/fields/Preferred_Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Preference__c</fullName>
    <description>Added per CRM-49 (Data Migration)</description>
    <label>Preferred Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cell</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>SMS (Text Message)</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
                <isActive>false</isActive>
                <label>Home Phone</label>
            </value>
            <value>
                <fullName>Work Phone</fullName>
                <isActive>false</isActive>
                <label>Work Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>