force-app/main/default/objects/Account/fields/Presales_as_of_Total_Contract__c.field-meta.xml
<CustomField>
    <fullName>Presales_as_of_Total_Contract__c</fullName>
    <description>CRM-4979</description>
    <label>Presales as % of Total Contract</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>