force-app/main/default/objects/Account/fields/Primary_Referral_Auth_Required__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referral_Auth_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to indicate if the member is a Primary Account Owner of a Joint Investment Account</description>
    <label>Primary Referral Auth Required</label>
    <type>Checkbox</type>
</CustomField>