force-app/main/default/objects/Account/fields/Privacy_Consent_Source__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Consent_Source__c</fullName>
    <label>Privacy Consent Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booking Portal</fullName>
            </value>
            <value>
                <fullName>PreQual</fullName>
            </value>
            <value>
                <fullName>Money Chat</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>