force-app/main/default/objects/Account/fields/Privacy_Policy_Consent_Received__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Consent_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Policy Consent Received</label>
    <type>Checkbox</type>
</CustomField>