force-app/main/default/objects/Account/fields/Prospect_Type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Type__c</fullName>
    <formula>Case
(
  RecordType.DeveloperName ,
  &quot;CCS_Business_Prospect&quot;, IMAGE(&quot;/resource/Prospect_Business&quot;, &quot;Business Prospect&quot;, 30, 30)  + &quot; Business&quot;,
  &quot;CCS_Individual_Prospect&quot;, IMAGE(&quot;/resource/Prospect_Individual&quot;, &quot;Individual Prospect&quot;, 30, 30)  + &quot; Individual&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Type</label>
    <type>Text</type>
</CustomField>