force-app/main/default/objects/Account/fields/RandomNumber__c.field-meta.xml
<CustomField>
    <fullName>RandomNumber__c</fullName>
    <formula>VALUE( 
 

RIGHT(TEXT( 
 

SQRT( 
 

(VALUE( 
 

TEXT(SECOND(TIMEVALUE(NOW())))&amp; 
 

TEXT(DAY(DATEVALUE(NOW())))&amp; 
 

TEXT(MONTH(DATEVALUE(NOW())))&amp; 
 

TEXT(YEAR(DATEVALUE(NOW())))&amp; 
 

TEXT(MINUTE(TIMEVALUE(NOW()))) 
 

)*(VALUE(RIGHT(  CRM_ID_AutoNumber__c ,2))+1) 
 

) 
 

) 
 

) 
 

,6 
 

) 
 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RandomNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>