force-app/main/default/objects/Account/fields/Recreation__c.field-meta.xml
<CustomField>
    <fullName>Recreation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Sports &amp; Recreation, Personal Interests, Music and Reading Interests, Favorite Traditions, Travel, Charities, Other Causes Supported, Service Clubs &amp; Organizations, Alumni of Universities and/or Associations)</inlineHelpText>
    <label>Recreation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>