force-app/main/default/objects/Account/fields/Referral_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Referral_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to share referrals internally. When checked, opens up visibility to financial accounts</description>
    <label>Referral Authorization</label>
    <type>Checkbox</type>
</CustomField>