force-app/main/default/objects/Account/fields/Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code__c</fullName>
    <description>Referral Code is a unique alphanumeric code for each member account used specifically for Referral Bonus , campaigns etc.,
Referral Codes are coming from SFMC to CRM. 
Referral Code wont change</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>