force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>DM Data - Per CRM 349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>