force-app/main/default/objects/Account/fields/Reported_Financial_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Financial_Year_End_Date__c</fullName>
    <description>CRM-4979</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reported Financial Year End Date</label>
    <type>Date</type>
</CustomField>