force-app/main/default/objects/Account/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <description>Data Migration - CRM-349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Residence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>