force-app/main/default/objects/Account/fields/Retail_RM__c.field-meta.xml
<CustomField>
    <fullName>Retail_RM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retail RM</label>
    <length>80</length>
    <type>Text</type>
</CustomField>