force-app/main/default/objects/Account/fields/RetailKYCDate__c.field-meta.xml
<CustomField>
    <fullName>RetailKYCDate__c</fullName>
    <description>The Created Date of the most recently created KYC record associated with this account, where the KYC Status field is &quot;Validated&quot;. Populated by the flow &quot;KYC SCR Create KYC from Account&quot;. This date refers only to individual members in a retail/personal context for KYCs performed within CRM. It does not include KYCs done in external systems (e.g. wealth systems like Dataphile), nor does it indicate KYCs done in a commercial context (e.g. for beneficial owners). CRM-6521.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Retail KYC Date</label>
    <type>Date</type>
</CustomField>