force-app/main/default/objects/Account/fields/RetailRM_LastCompletedActivity__c.field-meta.xml
<CustomField>
    <fullName>RetailRM_LastCompletedActivity__c</fullName>
    <description>Updated by ProcessBuilder, when a task is completed by a Retail RM, this field captures the datetime.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Retail RM Last Activity Completed</label>
    <type>DateTime</type>
</CustomField>