force-app/main/default/objects/Account/fields/Review_Engagement_Count__c.field-meta.xml
<CustomField>
    <fullName>Review_Engagement_Count__c</fullName>
    <formula>If( Review_Status__c = &quot;Completed&quot;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Engagement Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>