force-app/main/default/objects/Account/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <description>Updated Label per CRM 349</description>
    <label>Borrower&apos;s Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 - Com-excellent-high</fullName>
                <label>12 - Com-Excellent-High</label>
            </value>
            <value>
                <fullName>15 - Com-excellent</fullName>
                <label>15 - Com-Excellent</label>
            </value>
            <value>
                <fullName>18 - Com-excellent-low</fullName>
                <label>18 - Com-Excellent-Low</label>
            </value>
            <value>
                <fullName>22 - Com-good-high</fullName>
                <label>22 - Com-Good-High</label>
            </value>
            <value>
                <fullName>25 - Com-good</fullName>
                <label>25 - Com-Good</label>
            </value>
            <value>
                <fullName>28 - Com-Good-Low</fullName>
            </value>
            <value>
                <fullName>32 - Com-satisfactory-high</fullName>
                <label>32 - Com-Satisfactory-High</label>
            </value>
            <value>
                <fullName>34 - Acceptable (Medium)</fullName>
            </value>
            <value>
                <fullName>35 - Com-satisfactory</fullName>
                <label>35 - Com-Satisfactory</label>
            </value>
            <value>
                <fullName>36 - Acceptable (High)</fullName>
            </value>
            <value>
                <fullName>38 - Com-satisfactory-low</fullName>
                <label>38 - Com-Satisfactory-Low</label>
            </value>
            <value>
                <fullName>39 - Com-satisfactory-neg</fullName>
                <label>39 - Com-Satisfactory-Neg</label>
            </value>
            <value>
                <fullName>42 - Com-past Due Review</fullName>
                <label>42 - Com-Past Due Review</label>
            </value>
            <value>
                <fullName>45 - Com-management Inv</fullName>
                <label>45 - Com-Management Inv</label>
            </value>
            <value>
                <fullName>48 - Com-substandard</fullName>
                <label>48 - Com-Substandard</label>
            </value>
            <value>
                <fullName>52 - Com-doubtful</fullName>
                <label>52 - Com-Doubtful</label>
            </value>
            <value>
                <fullName>55 - Loss</fullName>
            </value>
            <value>
                <fullName>58 - Com-loss</fullName>
                <label>58 - Com-Loss</label>
            </value>
            <value>
                <fullName>60 - Community Lending</fullName>
            </value>
            <value>
                <fullName>99 - Com-non Borrowing</fullName>
                <label>99 - Com-Non Borrowing</label>
            </value>
            <value>
                <fullName>26- Com-good-low</fullName>
                <isActive>false</isActive>
                <label>26- Com-good-low</label>
            </value>
            <value>
                <fullName>52 - Com-substandard</fullName>
                <isActive>false</isActive>
                <label>52 - Com-substandard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>