force-app/main/default/objects/Account/fields/RM_Managed__c.field-meta.xml
<CustomField>
    <fullName>RM_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RM Managed</label>
    <type>Checkbox</type>
</CustomField>