force-app/main/default/objects/Account/fields/RollUp_Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>RollUp_Total_Assets__c</fullName>
    <description>Field used as part of the Roll-Up Summary Calculations</description>
    <label>Total Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>