force-app/main/default/objects/Account/fields/RollUp_Total_Number_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>RollUp_Total_Number_of_Accounts__c</fullName>
    <description>Field used as part of the Roll-Up Summary Calculations</description>
    <label>Total Number of Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>