force-app/main/default/objects/Account/fields/RR36_Age__c.field-meta.xml
<CustomField>
    <fullName>RR36_Age__c</fullName>
    <description>CRM-4266 - Calculates age from when RR Date is stamped.
CRM-6109 - Updated to PD_Rating__c</description>
    <formula>IF(
ISPICKVAL(PD_Rating__c, &quot;36&quot;),

TODAY() - RR36_Date_Stamp__c, 0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD 36 Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>