force-app/main/default/objects/Account/fields/RR36_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>RR36_Date_Stamp__c</fullName>
    <description>CRM-4266 - Stamped by CCS_Behavioural_Review_RR_Date_Stamp Flow</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RR36 Date Stamp</label>
    <type>Date</type>
</CustomField>