force-app/main/default/objects/Account/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <description>Data Migration, per CRM 349</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>