force-app/main/default/objects/Account/fields/SFMC_Filter__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Filter__c</fullName>
    <formula>IF( 
OR(
  CONTAINS(RecordType.Name, &quot;Prospect&quot;),
  ISPICKVAL(FinServ__Status__c, &quot;Closed&quot;),
  ISPICKVAL(FinServ__Status__c, &quot;Deceased&quot;),
  AND (
    CONTAINS(FinServ__BranchCode__c, &quot;A&quot;),
    FinServ__BranchCode__c != &quot;A15&quot;
  )
)

,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFMC_Exclude</label>
    <type>Checkbox</type>
</CustomField>