force-app/main/default/objects/Account/fields/Shared_with_Life__c.field-meta.xml
<CustomField>
    <fullName>Shared_with_Life__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-662 -- this field will be checked when a Life Referral is made. When the record is checked, the Member record is then shared with the Life Users</description>
    <label>Shared with Life</label>
    <type>Checkbox</type>
</CustomField>