force-app/main/default/objects/Account/fields/SIN_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>SIN_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the member has requested to opt out of the use of their Social Insurance Number. This implies that they do not want their SIN used for any marketing purposes. CRM-6354.</description>
    <label>SIN Opt Out</label>
    <type>Checkbox</type>
</CustomField>