force-app/main/default/objects/Account/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Motus Project Jira# MBM-110</description>
    <formula>IF(FinServ__BranchCode__c==&apos;A34&apos;, &apos;Motus&apos;,
 IF( ISBLANK(FinServ__BranchCode__c),&apos;&apos;,&apos;CCS&apos;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>