force-app/main/default/objects/Account/fields/T24_Profile_Number__c.field-meta.xml
<CustomField>
    <fullName>T24_Profile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter a valid T24 Profile Number (Membership numbers are not accepted) to merge this Prospect with the corresponding Member record (it will be merged overnight).</inlineHelpText>
    <label>T24 Profile Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>