force-app/main/default/objects/Account/fields/T24AccountName__c.field-meta.xml
<CustomField>
    <fullName>T24AccountName__c</fullName>
    <description>Used for T24Integration</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>T24AccountName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>