force-app/main/default/objects/Account/fields/T24FirstName__c.field-meta.xml
<CustomField>
    <fullName>T24FirstName__c</fullName>
    <description>Used for T24 Integration</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>T24FirstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>