force-app/main/default/objects/Account/fields/T24LastName__c.field-meta.xml
<CustomField>
    <fullName>T24LastName__c</fullName>
    <description>Used for T24 Integration</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>T24LastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>