force-app/main/default/objects/Account/fields/TEST_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>TEST_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEST Checkbox</label>
    <type>Checkbox</type>
</CustomField>