force-app/main/default/objects/Account/fields/TMP_MDM_Row_ID__c.field-meta.xml
<CustomField>
    <fullName>TMP_MDM_Row_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MDM Row ID (Temporary)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>