force-app/main/default/objects/Account/fields/Trade_Trust_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Trust_Name__c</fullName>
    <description>Value coming from T-24. CRM-349</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Trade/Trust Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>