force-app/main/default/objects/Account/fields/Trust_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account_No__c</fullName>
    <description>Agency-6 - New field to support Nominee Account Record Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Trust Account No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>