force-app/main/default/objects/Account/fields/UserMatchReporting__c.field-meta.xml
<CustomField>
    <fullName>UserMatchReporting__c</fullName>
    <formula>IF(
OR(

OR(
CONTAINS(Commercial_RM__c, $User.Account_Reporting_Branch__c),
CONTAINS(Retail_RM__c,$User.Account_Reporting_Branch__c)
),

AND(
$User.Reporting_Division__c = &quot;CBG&quot;,
OR(
CONTAINS(Commercial_RM__c,&quot;Business&quot;),
CONTAINS(Retail_RM__c,&quot;Business&quot;)
)
),


$User.UserRoleName__c = &quot;Retail Banking&quot;,
CONTAINS($User.UserRoleName__c,&quot;Region:&quot;)
),

TRUE,
FALSE
)</formula>
    <label>User Match: Reporting</label>
    <type>Checkbox</type>
</CustomField>