force-app/main/default/objects/Account/fields/Value_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Value_Engagement__c</fullName>
    <description>CRM-1208 - New field for Marketing, only visible via the Marketing Permission Set.
CRM-1483 - Changed field from Picklist to Text(100)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>