force-app/main/default/objects/Account/fields/Value_Index__c.field-meta.xml
<CustomField>
    <fullName>Value_Index__c</fullName>
    <description>CRM-1208 - New field for Marketing, only visible via the Marketing Permission Set.
CRM-1625 - Field updated to include 2 decimal places.</description>
    <inlineHelpText>Value Index can only be 1-100.</inlineHelpText>
    <label>VI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>