force-app/main/default/objects/Account/fields/Voter_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Voter_Control_Number__c</fullName>
    <description>CRM-6274</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Voter Control Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>