force-app/main/default/objects/Account/fields/Wealth_ID__c.field-meta.xml
<CustomField>
    <fullName>Wealth_ID__c</fullName>
    <description>Data Migration - CRM 349</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Wealth ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>