force-app/main/default/objects/Account/fields/Withholding_Tax_Country__c.field-meta.xml
<CustomField>
    <fullName>Withholding_Tax_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Withholding Tax Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>