force-app/main/default/objects/Account/recordTypes/Broker.recordType-meta.xml
<RecordType>
    <fullName>Broker</fullName>
    <active>true</active>
    <description>Represents a Broker / Agency</description>
    <label>Broker</label>
</RecordType>