force-app/main/default/objects/Account/recordTypes/CCS_Business_Prospect.recordType-meta.xml
<RecordType>
    <fullName>CCS_Business_Prospect</fullName>
    <active>true</active>
    <description>For Business Prospects</description>
    <label>Business Prospect</label>
</RecordType>